css/menikah.css
/* ... */
/* New fix for countdown alignment */
.countdown {
  display: flex;  /* Make sure it stays inline */
  justify-content: center;
  text-align: center;  /* Keep it centered */
  width: 100%
  margin: auto;
}

@media screen and (max-width: 768px) {
  .title.no-wrap {
    font-size: 10vw; /* Adjust font size for medium screens */
  }
}

@media screen and (max-width: 480px) {
  .title.no-wrap {
    font-size: 12vw; /* Adjust font size for small screens */
  }
}



/* for stopping the 2nd Cursive text to wrap */
.dynamic-title {
  font-family: 'Rouge', sans-serif !important; /* Replace with your font-family */
  font-size: 10vw; /* This adjusts the font size dynamically based on the viewport width */
  max-width: 100%; /* Prevents text from overflowing the container */
  word-wrap: break-word; /* Ensures that text breaks and doesn’t overflow */
  text-align: center; /* Ensures it's centered */
}

